autocomplete modification. z-index corrected and theme changed

--- a/WebContent/cssStyle/principal.css
+++ b/WebContent/cssStyle/principal.css
@@ -13,7 +13,7 @@ html,body {
 	height: 100%;
 	width: 100%;
 	overflow-y: hidden;
-	overflow-x: auto;
+	overflow-x: hidden;
 }
 
 header {
